[package]
name = "mindustry-net"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
lz4 = "1.28.1"
tokio = {  version="1.46.1", features = ["net", "sync", "time", "rt", "rt-multi-thread", "macros", "io-util"] }
num_enum = "0.7.4"
flate2 = "1.1.2"
phf = { version = "0.12.1", features = ["macros"] }
