[package]
name = "mindustry-net"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
lz4 = "1.28.1"
tokio = {  version="1.46.1", features = ["net", "sync", "time", "rt", "rt-multi-thread", "macros", "io-util"] }
num_enum = "0.7.4"
flate2 = "1.1.2"
phf = { version = "0.12.1", features = ["macros"] }
colored = "3.0.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
